Swagger documentation for all authentication
