# app/Http/Controllers/AuthController.php
@@ -7,13 +7,44 @@ use App\Http\Requests\LoginRequest;
 use App\Models\User;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Log;
 
 class AuthController extends Controller
 {
+    /**
+     * @OA\Post(
+     *     path="/api/register",
+     *     summary="Register account",
+     *     tags={"Authentication"},
+     *     @OA\RequestBody(
+     *         description="Register an account",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="name",
+     *                     description="Name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     description="Email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="Password",
+     *                     type="string"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response=201, description="Successfully created account"),
+     *     @OA\Response(response=422, description="Validation failed. Email is not unique")
+     * )
+     */
     public function register(AuthRequest $request) {
-
-
-
         $user = User::create([
             'name' => $request->name,
             'email' => $request->email,
@@ -28,6 +59,34 @@ class AuthController extends Controller
         ], 201);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/login",
+     *     summary="Login account",
+     *     tags={"Authentication"},
+     *     @OA\RequestBody(
+     *         description="Login to an existing account",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="email",
+     *                     description="Email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="Password",
+     *                     type="string"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response=200, description="Successfully created account"),
+     *     @OA\Response(response=422, description="Validation failed. Email is not unique")
+     * )
+     */
     public function login(LoginRequest $request) {
         $credentials = $request->only('email', 'password');
 
